Mopped up project-renaming bugs and made a good start on README.md

--- a/pandashells/bin/p.config
+++ b/pandashells/bin/p.config
@@ -10,7 +10,7 @@ sys.path.append('../..')
 ##########################################################################
 
 
-from ptools.lib import config_lib
+from pandashells.lib import config_lib
 
 
 if __name__ == '__main__':
