Reworked the way plots are styled.  Using seaborn now.

--- a/pandashells/bin/p.config
+++ b/pandashells/bin/p.config
@@ -41,6 +41,8 @@ if __name__ == '__main__':
             if not t[0] in ['force_defaults']}
 
     if args.force_defaults:
+        cmd = 'rm {}'.format(config_lib.CONFIG_FILE_NAME)
+        os.system(cmd)
         config_dict = config_lib.DEFAULT_DICT
     config_lib.set_config(config_dict)
 
