moving stuff back because I didn't need to move it in the first place

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -46,9 +46,18 @@ build:
 requirements:
   build:
     - python
-    - setuptools
+    - jinja2
+    - numpy
+    - scipy
+    - matplotlib
+    - scikit-learn
+    - pandas
+    - statsmodels
+    - seaborn
 
   run:
+    - python
+    - jinja2
     - numpy
     - scipy
     - matplotlib
